# cpp-roche

./: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  bootstrap  configure.ac  revise
doc/: Changes.html  Doxyfile.in  Makefile  Makefile.am  Makefile.in  docgen.in
doc/html/: Programs.html  algol.html  cphase.html  equalrv.html  impact.html  index.html  lagrange.html  pcont.html  pdwd.html  pphi.html  pstream.html
include/: Makefile  Makefile.am  Makefile.in  trm_roche.h
include/trm/: roche.h
src/: Makefile.am  Makefile.in  algol.cc  blink.cc  contact.cc  cphase.cc  disc_eclipse.cc  drpot.cc  eprob.cc  equalrv.cc  face.cc  fblink.cc  flobe1.cc  gsint.cc  hits.cc  impact.cc  ingress_egress.cc  irrad.cc  jacobi.cc  lagrange.cc  lobe1.cc  lobe2.cc  pcont.cc  pdwd.cc  pot_min.cc  pphi.cc  pshade.cc  pstream.cc  rdot.cc  ref_sphere.cc  rlobe_eggleton.cc  rocacc.cc  roche_shadow.cc  rpot.cc  rpot_grad.cc  rpot_val.cc  rpot_val_grad.cc  set_earth.cc  speed_test.cc  sphere_eclipse.cc  (+18 more)
